Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}
- Fixed test failures with JSON 2.90 (thanks Samuel Kaufman!)

2.004004  2012-11-21 12:20:41 Europe/Vienna
- Fixed test failures in t/[rest,rpc]/item.t on newer HTTP::Message versions
- Don't wrap the SQLite test schema DDL queries in a transaction to suppress
  DBIx::Class warnings
- Added diagnostic messages to tests that trigger DBIx::Class warnings

2.004003  2011-12-19 14:41:59 Europe/Vienna
- Fixed test failure in generic.t with Moose > 2.02

2.004002  2011-10-24 15:48:55 Europe/Vienna

- Use the column accessor instead of set_column when inserting new objects
- Allow setting the result_class to undef to prevent the usage of HashRefInflator

2.004001  2011-08-19 16:17:53 Europe/Vienna

- Changed stored_model and stored_result_source attributes to methods for
  ACCEPT_CONTEXT/Catalyst::Component::InstancePerContext compatibility

2.003002  2011-05-09 12:30:01 Europe/Vienna

- Added has_errors method
- Fixed tests to succeed with newer DBIx::Class and Moose versions
- Fixed controller instantiation failures with Moose 2 in relation to prefetch

2.003001  2011-02-16 17:52:37 Europe/Vienna

- Use JSON instead of JSON::Any to get rid of the CPAN Testers failures
  when only JSON::Syck is available

2.002004  2011-01-13 19:22:20 Europe/Vienna

- Renamed Visitor to Validator::Visitor to conform with Data::DPath::Validator
  and moved it into a separate file.
- Fixed failure because of Data::DPath >=0.41 by not using
  MooseX::Role::BuildInstanceOf for the validator attributes (RT#64673)
- Added result_class and stash_key attributes to Catalyst::Controller::DBIC::API,
  allowing the values of them to be derived from the controller configuration (RT#63686)

2.002003  2010-09-16 10:44:40 Europe/Vienna

- Added REST and RPC delete_bulk tests
- Fixed RPC delete_bulk not working at all
- Added REST and RPC update_bulk tests
- Removed useless RPC index action