@@ -37,9 +37,7 @@ repository.web = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=catagits/Catalys
 [Prereqs]
 perl = 5.008006
 DBIx::Class = 0.08103
-Catalyst::Runtime = 5.7010
-Catalyst::Controller::ActionRole = 0
-Catalyst::ActionRole::MatchRequestMethod = 0
+Catalyst::Runtime = 5.90020
 Catalyst::Action::Serialize = 0.83
 CGI::Expand = 2.02
 JSON = 2.50
